plugins {
    id 'org.ajoberstar.grgit' version '3.0.0'
    id 'com.jonaslasauskas.capsule' version '0.3.0'
}

apply plugin: 'application'

def genDir = 'gen'
def versionDir = "$genDir/main/java"

task generateVersion {
    def outputDir = file("$versionDir")
    outputs.dir outputDir
    doFirst {
        def srcFile = new File(outputDir, "de/bwravencl/controllerbuddy/Version.java")
        srcFile.parentFile.mkdirs()
        srcFile.write("""package de.bwravencl.controllerbuddy;\n
public class Version {
\tpublic static String getVersion() {
\t\treturn "$project.version";
\t}
}
""")
    }
}

task cleanVersion {
    delete genDir
}

clean {
    dependsOn cleanVersion
}

compileJava {
    dependsOn generateVersion
    source generateVersion.outputs.files, sourceSets.main.java
}

mainClassName = 'de.bwravencl.controllerbuddy.gui.Main'
version = "${org.ajoberstar.grgit.Grgit.open(dir: projectDir).describe(longDescr: true).replaceFirst(java.util.regex.Pattern.quote('-'), '.').replaceFirst(java.util.regex.Pattern.quote('-g'), '-')}"

sourceCompatibility = 11
targetCompatibility = 11

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

ext {
    jnaVersion = '4.5.2'
    lwjglVersion = '3.2.0'
}

dependencies {
    compile 'commons-cli:commons-cli:1.4',
            'com.github.nyholku:purejavahidapi:322fdb03b7',
            'com.google.code.gson:gson:2.8.5',
            "net.java.dev.jna:jna:$jnaVersion",
            "net.java.dev.jna:jna-platform:$jnaVersion",
            "org.lwjgl:lwjgl:$lwjglVersion",
            "org.lwjgl:lwjgl:$lwjglVersion:natives-linux",
            "org.lwjgl:lwjgl:$lwjglVersion:natives-macos",
            "org.lwjgl:lwjgl:$lwjglVersion:natives-windows",
            "org.lwjgl:lwjgl-glfw:$lwjglVersion",
            "org.lwjgl:lwjgl-glfw:$lwjglVersion:natives-linux",
            "org.lwjgl:lwjgl-glfw:$lwjglVersion:natives-macos",
            "org.lwjgl:lwjgl-glfw:$lwjglVersion:natives-windows",
            "org.lwjgl:lwjgl-opengl:$lwjglVersion",
            "org.lwjgl:lwjgl-opengl:$lwjglVersion:natives-windows",
            "org.lwjgl:lwjgl-openvr:$lwjglVersion",
            "org.lwjgl:lwjgl-openvr:$lwjglVersion:natives-windows"
}

capsule {
    capsuleManifest {
        applicationId = 'de.bwravencl.controllerbuddy'
        applicationClass = 'de.bwravencl.controllerbuddy.gui.Main'
    }
    baseName 'ControllerBuddy'
}

apply plugin: 'eclipse'

tasks.eclipse.dependsOn generateVersion

eclipse {
    classpath {
        file {
            whenMerged { cp ->
                cp.entries.add( new org.gradle.plugins.ide.eclipse.model.SourceFolder("$versionDir", null) )
            }
        }
    }
}
